// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success should create package.json 1`] = `
"{
	\\"dependencies\\": {
		\\"@kosko/env\\": \\"^0.1.0\\",
		\\"kubernetes-models\\": \\"^0.2.1\\"
	}
}
"
`;

exports[`when the target exists when package.json exists should update package.json 1`] = `
"{
	\\"name\\": \\"foo\\",
	\\"version\\": \\"1.2.3\\",
	\\"dependencies\\": {
		\\"@kosko/env\\": \\"^0.1.0\\",
		\\"kubernetes-models\\": \\"^0.2.1\\"
	}
}
"
`;
